Code - Fixed profile build

--- a/CvGameCoreDLL/Makefile
+++ b/CvGameCoreDLL/Makefile
@@ -181,7 +181,7 @@ LDFLAGS = $(Release_LDFLAGS) /LTCG
 !IFNDEF _NMAKE_VER
 !ERROR Jom can't be used on profile builds
 !ENDIF
-CFLAGS  = $(Release_CFLAGS) /Zi
+CFLAGS  = $(Release_CFLAGS) /Zi /DFP_PROFILE_ENABLE /DCUSTOM_PROFILER
 LDFLAGS = $(Debug_LDFLAGS)
 !ENDIF
 !IF "$(TARGET)" == "OOS"
